# mlops-course

./: .gitignore  Dockerfile  README.md  commands.py  pyproject.toml
keywords_extraction/: infer.py  train.py
