[tool.poetry]
name = "keyword-extraction"
version = "0.1.0"
description = "Project for extracting tags (keywords) from Stack Overflow questions"
authors = ["natriistorm <natriistorm@mail.ru>"]
readme = "README.md"
packages = [{include = "keyword_extraction"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
transformers = "^4.38.2"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"
numpy = "^1.26.4"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
